--- a/lectures/conformal_ds/conformal_ds.tex
+++ b/lectures/conformal_ds/conformal_ds.tex
@@ -254,10 +254,9 @@ and as $Z_1,\dots,Z_{n+1}$ are weighted exchangeable,
 &= p^w_i(z_1,\dots,z_{n+1}).
 \end{align*}
 In other words,  
-\begin{equation}
-\label{eq:weighted_dist}
+\[
 R_{n+1}|E_z \sim \sum_{i=1}^{n+1} p^w_i(z_1,\dots,z_{n+1})\delta_{r_i},
-\end{equation}
+\]
 which implies that
 \[
 \P\bigg\{ R_{n+1} \leq \Quantile\bigg( 1-\alpha; \, \sum_{i=1}^{n+1}
@@ -351,49 +350,65 @@ conditional on $Z_0$.
 
 \paragraph{CDF form.}
 
-The analogous CDF form of the conformal set in \eqref{eq:weighted_conf} (similar
-to what we saw for ordinary unweighted conformal methods, in the last lecture)
-is a bit uglier and looks more complicated in the current setting. This is
-because in order to derive it we need to adjust the nominal level of $1-\alpha$
-upwards so that it lies in the range of the CDF of the discrete distribution in
-\eqref{eq:weighted_dist}; but this range depends on the weights in
-\eqref{eq:pw}, which themselves depend on the data. This is the primary reason
-that we use the quantile form in \eqref{eq:weighted_conf}, since we can always
-use the unadjusted level $1-\alpha$ and completely avoid these complications.  
+The analogous CDF form of the conformal set in \eqref{eq:weighted_conf} is as
+follows: 
+\begin{equation}
+\label{eq:weighted_cdf}
+\hC^w_n(x) = \bigg\{ y : \sum_{i=1}^{n+1} p^w_i\big( Z_1,\dots,Z_n,(x,y) \big) 
+1\Big\{ R_i^{(x,y)} \leq R^{(x,y)}_{n+1} \Big\} \leq \lceil 1-\alpha \rceil_w
+\bigg\},   
+\end{equation}
+where \smash{$\lceil 1-\alpha \rceil_w = \min\{ \tau \in \mathrm{range}(F^w) :
+  \tau \geq 1-\alpha\}$} and we write $F^w$ for the (random) CDF of the
+discrete distribution \smash{$\sum_{i=1}^{n+1} p^w_i( Z_1,\dots,Z_n,(x,y))  
+  \delta_{R^{(x,y)}_i}$}. This is more complicated in the current weighted
+setting (compared to what we saw for ordinary unweighted conformal methods, in 
+the last lecture) because we need to adjust the nominal level of $1-\alpha$
+upwards so that it lies in the range of the CDF of the weighted score
+distribution; but this distribution is random, and so the adjustment is itself
+random. This is the primary reason that we began with the quantile form in 
+\eqref{eq:weighted_conf}, since we can always use the unadjusted level
+$1-\alpha$ and completely any such complications.     
 
 \paragraph{Auxiliary randomization for exact coverage.}
 
 It is also worth noting that we can achieve exact coverage by using auxiliary
-randomization directly in quantile form, so that \eqref{eq:weighted_conf}
-becomes:      
+randomization, either in CDF or quantile form. Applying our previous
+randomization trick (from the last lecture) to the CDF form
+\eqref{eq:weighted_cdf} gives 
+\begin{multline*}
+\hC_n^{w,*}(x) = \bigg\{ y : \sum_{i=1}^{n+1} p^w_i\big( Z_1,\dots,Z_n,(x,y)
+\big) 1\Big\{ R_i^{(x,y)} < R^{(x,y)}_{n+1} \Big\} +{} \\ U \sum_{i=1}^{n+1} 
+p^w_i\big( Z_1,\dots,Z_n,(x,y) \big) 1\Big\{ R_i^{(x,y)} = R^{(x,y)}_{n+1}
+\Big\} \leq 1-\alpha \bigg\},
+\end{multline*}
+where $U \sim \mathrm{Unif}(0,1)$, independent of everything else. This is
+fairly simple and intuitive---it is free of any level adjustments needed in the   
+unrandomized CDF-based set in \eqref{eq:weighted_cdf}. Meanwhile, we can also 
+randomize the quantile form \eqref{eq:weighted_conf}, as in  
+\begin{multline*}
+\hC^{w,*}_n(x) = \bigg\{ y : R_{n+1}^{(x,y)} \leq {} \\
+B^w \cdot \Quantile\bigg( 1-\alpha; \, \sum_{i=1}^n p^w_i\big(
+Z_1,\dots,Z_n,(x,y) \big) \delta_{R_i^{(x,y)}} + p^w_{n+1}\big(
+Z_1,\dots,Z_n,(x,y) \big) \delta_\infty \bigg) +{} \\ 
+(1-B^w) \cdot \Quantile\bigg( \lfloor 1-\alpha \rfloor_w; \, 
+\sum_{i=1}^n p^w_i\big( Z_1,\dots,Z_n,(x,y) \big) \delta_{R_i^{(x,y)}} +
+p^w_{n+1}\big( Z_1,\dots,Z_n,(x,y) \big) \bigg\},     
+\end{multline*}
+where now \smash{$\lfloor 1-\alpha \rfloor_w = \max\{ \tau \in
+  \mathrm{range}(F^w) : \tau \leq 1-\alpha\}$} with $F^w$ denoting the (random)
+CDF of the discrete distribution \smash{$\sum_{i=1}^{n+1} p^w_i(
+  Z_1,\dots,Z_n,(x,y)) \delta_{R^{(x,y)}_i}$} as before, and 
 \[
-\hC^{w,*}_n(x) = \bigg\{ y : R_{n+1}^{(x,y)} \leq \mathrm{RandQuant}\bigg( 
-1-\alpha; \, \sum_{i=1}^n p^w_i\big( Z_1,\dots,Z_n,(x,y) \big)
-\delta_{R_i^{(x,y)}} + p^w_{n+1}\big( Z_1,\dots,Z_n,(x,y) \big) \delta_\infty
-\bigg) \bigg\},    
+B^w \sim \mathrm{Bernoulli}\bigg( \frac{1-\alpha - \lfloor 1-\alpha \rfloor_w}
+{\lceil 1-\alpha \rceil_w - \lfloor 1-\alpha \rfloor_w} \bigg).
 \]
-where $\mathrm{RandQuant}(\beta; P)$ is a suitably-randomized level $\beta$ 
-quantile, defined for any discrete distribution $P$, as follows. First we
-define $P$-specific ceiling and floor functions, which round a given level
-$\beta$ up or down to the nearest point in the range of the CDF $F$ of $P$.
-Formally, these are \smash{$\lceil \beta \rceil_P = \min\{ \tau \in
-  \mathrm{range}(F) : \tau \geq \beta\}$} and \smash{$\lfloor \beta \rfloor_P =
-  \max\{\tau \in \mathrm{range}(F) : \tau \leq \beta\}$}. Then we define    
-\[
-\mathrm{RandQuant}(\beta; F) = 
-\begin{cases}
-\displaystyle
-\Quantile(\beta; P) & 
-\text{with probability $(\beta - \lfloor \beta \rfloor_P) /
-  (\lceil \beta \rceil_P - \lfloor \beta \rfloor_P)$} \\
-\Quantile(\lfloor \beta \rfloor_P; P)& 
-\text{with probability $(\lceil \beta \rceil_P - \beta) /
-  (\lceil \beta \rceil_P - \lfloor \beta \rfloor_P)$}.
-\end{cases}
-\]
-(In the ambigous case when $\beta \in \mathrm{range}(F)$, we interpret
-$\mathrm{RandQuant}(\beta; P) = \Quantile(\beta; P)$.) The randomized weighted
-conformal set \smash{$\hC^{w,*}_n$} defined above then satisfies 
+Interestingly, the randomized conformal set in the second-to-last display is
+actually less intuitive---we must introduce level adjustments that were not
+needed in the unrandomized quantile-based set in \eqref{eq:weighted_conf}. 
+Ultimately, either version of the randomized weighted conformal set
+\smash{$\hC^{w,*}_n$} defined above (it is not clear that the two are
+equivalent) satisfies    
 \[
 \P\big( Y_{n+1} \in \hC^{w,*}_n(X_{n+1}) \big) = 1-\alpha.  
 \]
@@ -741,6 +756,16 @@ weights to training points whose distributions are representative of the test
 distribution. 
 
 \paragraph{CDF form.}
+
+The analogous CDF form of the conformal set in \eqref{eq:weighted_conf_nex} is
+as follows: 
+\begin{equation}
+\label{eq:weighted_conf_cdf_nex}
+\hC^w_n(x) = \bigg\{ y : \sum_{i=1}^{n+1} \tw_i \, 1\Big\{ R_i^{(x,y)} \leq
+R^{(x,y)}_{n+1} \Big\} \leq \lceil 1-\alpha \rceil_w \bigg\},
+\end{equation}
+where \smash{$\lceil \beta \rceil_w = \min\{ \tau \in
+  \mathrm{range}(F^w) : \tau \geq \beta\}$} and $F^w$ is the CDF of
 
 
 
